syntax = "proto3";

package eth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/OpenAudio/go-openaudio/pkg/api/eth/v1";

message GetStatusRequest {}

message GetStatusResponse {
  bool ready = 1;
}

message GetRegisteredEndpointsRequest {}

message GetRegisteredEndpointsResponse {
  repeated ServiceEndpoint endpoints = 1;
}

message GetRegisteredEndpointsForServiceProviderRequest {
  string owner = 1;
}

message GetRegisteredEndpointsForServiceProviderResponse {
  repeated ServiceEndpoint endpoints = 1;
}

message GetRegisteredEndpointInfoRequest {
  string endpoint = 1;
}

message GetRegisteredEndpointInfoResponse {
  ServiceEndpoint se = 1;
}

message ServiceEndpoint {
  int64 id = 1;
  string owner = 2;
  string endpoint = 3;
  int64 block_number = 4;
  string delegate_wallet = 5;
  google.protobuf.Timestamp registered_at = 6;
  string service_type = 7;
}

message GetServiceProviderRequest {
  string address = 1;
}

message GetServiceProviderResponse {
  ServiceProvider serviceProvider = 1;
}

message GetServiceProvidersRequest {}

message GetServiceProvidersResponse {
  repeated ServiceProvider serviceProviders = 1;
}

message GetStakingMetadataForServiceProviderRequest {
  string address = 1;
}

message GetStakingMetadataForServiceProviderResponse {
  int64 total_staked = 1;
  int64 rewards_per_round = 2;
}

message ServiceProvider {
  string wallet = 1;
  int64 deployer_stake = 2; 
  int64 deployer_cut = 3; 
  bool valid_bounds = 4;
  int32 number_of_endpoints = 5;
  int64 min_account_stake = 6;
  int64 max_account_stake = 7;
}

message GetLatestFundingRoundRequest {}

message GetLatestFundingRoundResponse {
  int64 round = 1;
  int64 eth_block = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message IsDuplicateDelegateWalletRequest {
  string wallet = 1;
}

message IsDuplicateDelegateWalletResponse {
  bool is_duplicate = 1;
}

message RegisterRequest {
  string delegate_key = 1;
  string endpoint = 2;
  string service_type = 3;
}

message RegisterResponse {}

message SubscriptionRequest {}

message SubscriptionResponse {
  message DeregistrationEvent {
    ServiceEndpoint service_endpoint = 1;
  }

  oneof event {
    DeregistrationEvent deregistration = 1;
  }
}

message GetActiveSlashProposalForAddressRequest {
  string address = 1;
}

message GetActiveSlashProposalForAddressResponse {
  int64 proposalId = 1;
  string proposer = 2;
  int64 submissionBlockNumber = 3;
  string targetContractRegistryKey = 4;
  string targetContractAddress = 5;
  int64 callValue = 6;
  string functionSignature = 7;
  string callData = 8;
}
